--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,56 +1,57 @@
 * { padding: 0; margin: 0 }
-
-body { 
-    background-color: #CEF;
-}
+html, body { width: 100%; height: 100% }
 
 #wrap {
-    display: inline-block;
-    margin: 5px auto;
+    width: 1024px;
+    min-height: 600px;
 }
 
-#widgetLogin {
-    width: 320px;
-    height: 460px;
-    display: inline-block;
+#widgetLogin, #widgetSignup {
+    width: 240px;
     background: #ACE;
     border-radius: 15px;
-    margin: 5px;
     padding: 10px;
-    float: left;
+    position: absolute;
+    left: 392px;
+    top: 300px;
 }
 
-#widgetLogin #btnConnect, #btnForgot {
-    width: 100%; /* 49% */
-}
 
-#widgetLogin select{
-    margin-bottom: 5px;
+#widgetLogin span{
+    text-align: center;
     width: 100%;
+    display: block;
 }
+
+#btnConnect                 { width: 100%; }
+#btnRegister, #btnSignup    { width: 80px; }
+#btnForgot, #btnLogin       { width: 155px; }
 
 .forms {
     border-radius: 10px;
     padding: 2px;
-    width: 320px;
-    margin-bottom: 5px;
+    width: 100%;
     box-sizing: border-box;
+    margin-top: 3px;
+    margin-bottom: 2px;
 }
 
-hr { margin: 1px auto 5px; }
+select {
+    margin-bottom: 5px;
+}
 
 #game {
-    width: 640px;
-    height: 480px;
-    margin: 5px;
+    z-index: -1;
+    width: 1024px;
+    height: 600px;
     border-radius: 15px;
     float: left;
     cursor: crosshair;
 }
 
 #widgetChat {
-    width: 550px;
-    height: 460px;
+    width: 480px;
+    height: 580px;
     display: inline-block;
     background: #ACE;
     border-radius: 15px;
@@ -60,8 +61,8 @@ hr { margin: 1px auto 5px; }
 
 #messages {
     background-color: white;
-    width: 550px;
-    height: 412px;
+    width: 100%;
+    height: 530px;
     margin-bottom: 5px;
     overflow-y: scroll;
 }
