--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,7 +16,6 @@ html, body { width: 100%; height: 100% }
     top: 300px;
 }
 
-
 #widgetLogin span{
     text-align: center;
     width: 100%;
@@ -28,7 +27,7 @@ html, body { width: 100%; height: 100% }
 #btnForgot, #btnLogin       { width: 155px; }
 
 .forms {
-    border-radius: 10px;
+    border-radius: 8px;
     padding: 2px;
     width: 100%;
     box-sizing: border-box;
@@ -44,31 +43,44 @@ select {
     z-index: -1;
     width: 1024px;
     height: 600px;
-    border-radius: 15px;
+    border-radius: 10px;
     float: left;
     cursor: crosshair;
 }
 
 #widgetChat {
-    width: 480px;
-    height: 580px;
-    display: inline-block;
+    opacity: 0.5;
+    position: absolute;
+    left: 524px;
+    top: 445px;
+    width: 490px;
+    height: 130px;
     background: #ACE;
-    border-radius: 15px;
-    margin: 5px;
-    padding: 10px;
+    border-radius: 15px 0 0 0;
+    padding: 5px;
+    font-size: 12px;
+}
+
+#widgetChat:hover{
+    opacity: 0.85;
+}
+
+#widgetChat input{
+    height: 20px;
+    width: 100%;
+    border-radius: 0 0 8px 8px;
 }
 
 #messages {
     background-color: white;
     width: 100%;
-    height: 530px;
-    margin-bottom: 5px;
+    height: 110px;
     overflow-y: scroll;
+    border-radius: 8px 8px 0 0;
 }
 
 .chatMessage {
-    padding: 2px;
+    padding: 1px;
 }
 
 .normal:nth-child(odd) {
