--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -63,7 +63,7 @@ select {
 #widgetChat input{
     height: 20px;
     width: 100%;
-    border-radius: 0 0 8px 8px;
+    border-radius: 0;
 }
 
 #messages {
