--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,18 @@ html, body { width: 100%; height: 100% }
     min-height: 600px;
 }
 
+#loadingScreen {
+    width: 1024px;
+    height: 300px;
+    background-color: #000;
+    position: absolute;
+    top: 0;
+    color: white;
+    text-align: center;
+    padding-top: 300px;
+    z-index: 1;
+}
+
 #widgetLogin, #widgetSignup {
     width: 240px;
     background: #ACE;
