--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -100,6 +100,12 @@ select {
     font-weight: bold;
 }
 
+.badnik {
+    background-color: crimson;
+    color: #ffffff;
+    font-weight: bold;
+}
+
 #formText { float: left ; width: 80% }
 #btnChat { width: 20% }
 
